crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__parenthesized__generator.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/parenthesized/generator.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..21,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..12,
                    value: Tuple(
                        ExprTuple {
                            node_index: NodeIndex(None),
                            range: 0..12,
                            elts: [
                                Named(
                                    ExprNamed {
                                        node_index: NodeIndex(None),
                                        range: 1..7,
                                        target: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 1..2,
                                                id: Name("x"),
                                                ctx: Store,
                                            },
                                        ),
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                node_index: NodeIndex(None),
                                                range: 6..7,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 9..12,
                                        id: Name("for"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: true,
                            is_anon_named_tuple: false,
                            is_anon_named_tuple_value: false,
                            callable_shape: None,
                            is_parameter_shape: false,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 13..19,
                    value: Compare(
                        ExprCompare {
                            node_index: NodeIndex(None),
                            range: 13..19,
                            left: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 13..14,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            ops: [
                                In,
                            ],
                            comparators: [
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 18..19,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            identity_ops: None,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | (x := 1, for x in y)
  |          ^^^ Syntax Error: Expected an identifier, but found a keyword `for` that cannot be used here


  |
1 | (x := 1, for x in y)
  |              ^ Syntax Error: Expected `)`, found name


  |
1 | (x := 1, for x in y)
  |                    ^ Syntax Error: Expected a statement


  |
1 | (x := 1, for x in y)
  |                     ^ Syntax Error: Expected a statement
